# silly-goofy-llm

./: README.md  pyproject.toml
silly_goofy_llm/: main.py
