[tool.poetry]
name = "silly-goofy-llm"
version = "0.1.0"
description = ""
authors = ["Nicholas Tindle <nicholas.tindle@agpt.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
